--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@
 
     <!-- <script src="js/bundle.js"></script> -->
     <script src="./js/script.js"></script>
+    <script src="./js/popup3.js"></script>
 
 </body>
 
