--- a/src/index.html
+++ b/src/index.html
@@ -552,7 +552,7 @@
 
 
     <!-- <script src="js/bundle.js"></script> -->
-    <script type="module" src="../dist/bundle.js"></script>
+    <script type="module" src="./js/bundle.js"></script>
 
 </body>
 
