--- a/src/mozaika.html
+++ b/src/mozaika.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/style.min.css">
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <link rel="stylesheet" href="css/custom-styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -604,7 +605,7 @@
     </div>
 
 
-    <!-- <script src="js/bundle.js"></script> -->
+
     <script type="module" src="./js/mozaika.js"></script>
 </body>
 
